--- a/index.html
+++ b/index.html
@@ -129,12 +129,20 @@
             </div>
         </div>
 
-        <!-- <div id="loader">
+        <div id="loader">
             <div class="loader-img-container">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRizr2lpFUzj3_hy1tkGmVCPJURWOo_IA059A&s" alt="">
                 <div class="overlay"></div>
             </div>
-        </div> -->
+            <div class="loader-text-container">
+                <div class="main-loader">
+                    <div class="loder"></div>
+                </div>
+                <h3>loading...</h3>
+            </div>
+        </div>
+
+       
 
     </div>
     
