--- a/index.html
+++ b/index.html
@@ -66,7 +66,37 @@
                     <div class="shadow" >
                          <img  src="./image.jpg" alt="">
                     </div>
-                  
+                    <div class="blur-light">
+                        <img src="./image.jpg" alt="">
+                    </div>
+                    <div class="brightness-low">
+                        <img src="./image.jpg" alt="">
+                    </div>
+                    <div class="contrast-low">
+                        <img src="./image.jpg" alt="">
+                    </div>
+                    <div class="grayscale-partial">
+                        <img src="./image.jpg" alt="">
+                    </div>
+                    <div class="huerotate-180">
+                        <img src="./image.jpg" alt="">
+                    </div>
+                    <div class="invert-half">
+                        <img src="./image.jpg" alt="">
+                    </div>
+                    <div class="opacity-high">
+                        <img src="./image.jpg" alt="">
+                    </div>
+                    <div class="saturate-low">
+                        <img src="./image.jpg" alt="">
+                    </div>
+                    <div class="sepia-light">
+                        <img src="./image.jpg" alt="">
+                    </div>
+                    <div class="shadow-blue">
+                        <img src="./image.jpg" alt="">
+                    </div>
+                                
 
                 </div>
             </div>
